--- a/style.css
+++ b/style.css
@@ -1,1 +1,47 @@
 /* CSS Style Sheet */
+html {
+  background: url(img/kungfupandabackground.jpg) no-repeat center fixed;
+  background-size: cover;
+}
+body {
+  background-color: rgba(255, 255, 255, 0.7);
+  width: 600px;
+  margin: 25px auto;
+  text-align: center;
+  padding-top: 50px;
+  border-radius: 25px;
+}
+.img-p {
+  padding: 50px 0px;
+}
+div {
+  background-color: rgba(72, 116, 63, 0.7);
+  color: white;
+  padding: 20px 0px;
+  border-bottom-left-radius: 25px;
+  border-bottom-right-radius: 25px;
+}
+h1,
+h2 {
+  font-family: Papyrus;
+}
+h1 {
+  margin: 40px 0px;
+}
+input {
+  font-size: 18px;
+  padding: 5px;
+  border-radius: 5px;
+}
+button {
+  background-color: rgb(72, 116, 63);
+  color: white;
+  padding: 5px 20px;
+  font-variant: small-caps;
+  border-radius: 5px;
+  font-size: large;
+}
+button:hover {
+  background-color: rgb(107, 154, 98);
+  cursor: pointer;
+}
